# game-in-motion

./: .gitignore  CMakeLists.txt
ffmpeg/: ffmpeg.diff  vf_motionblur.c
src/: avinfo.cc  avinfo.h  cli.cc  cli.h  main.cc
